--- a/src/android-mlkit/app/src/main/AndroidManifest.xml
+++ b/src/android-mlkit/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
             android:exported="true"
             android:fitsSystemWindows="true"
             android:label="@string/app_name"
-            android:windowSoftInputMode="adjustResize">
+            android:windowSoftInputMode="adjustResize"
+            android:configChanges="orientation|screenSize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,7 +37,8 @@
         </activity>
         <activity
             android:name=".BarcodeScanningActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:configChanges="orientation|screenSize" />
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
